--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="img/natan.jpeg" alt="Natanael">
       <h3 class="greeting-1">Hey There!!</h3>
       <p class="greeting-2">its..</p>
-      <h2 class="my-name">Natanael Nugroho</h2>
+      <p class="my-name">Natanael Nugroho</p>
     </div>
   </section>
 
@@ -50,6 +50,7 @@
 
   <!-- Hobbies -->
   <section class="hobies" id="hobies">
+    <div class="hobies-content">
     <div class="hobies-text">
       <h2 class="my-hobies">My Hobies</h2>
       <p class="hobies-detail">
@@ -58,7 +59,19 @@
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat.<p/>
     </div>
-    
+    <div class="container">
+      <img src="img/gambar1.jpg" class="jumbo">
+      <div class="thumbnail">
+        <img src="img/gambar1.jpg" class="thumb">
+        <img src="img/gambar2.jpg" class="thumb">
+        <img src="img/gambar3.jpg" class="thumb">
+        <img src="img/gambar4.jpg" class="thumb">
+        <img src="img/gambar5.jpg" class="thumb">
+        <img src="img/gambar6.jpg" class="thumb">
+      </div>
+    </div>
+    </div>
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
