--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="#hobies">Hobies</a>
       </div>
       <div class="menu">
-      <a href="#">Portofolio</a>
+      <a href="#porto">Portofolio</a>
       </div>
     </div>
   </section>
@@ -72,6 +72,64 @@
     </div>
     </div>
   </section>
+
+  <!-- Portofolio Start -->
+  <section class="porto" id="porto">
+    <div class="porto-content">
+      <div class="porto-text">
+        <h2 class="porto-title">Portofolio</h2>
+        <p class="porto-detail">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.
+        </p>
+      </div>
+          <div class="slider">
+          <div class="slides">
+            <!-- radio buttons start -->
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+            <!-- radio buttons end -->
+            <!-- slider image start -->
+            <div class="slide first">
+              <img src="img/image1.png" alt="gambar1">
+            </div>
+            <div class="slide">
+              <img src="img/image2.png" alt="gambar2">
+            </div>
+            <div class="slide">
+              <img src="img/image3.png" alt="gambar3">
+            </div>
+            <div class="slide">
+              <img src="img/image4.png" alt="gambar4">
+            </div>
+            <!-- slider image end -->
+            <!-- automatic navigation start -->
+            <div class="navigation-auto">
+              <div class="auto-btn1"></div>
+              <div class="auto-btn2"></div>
+              <div class="auto-btn3"></div>
+              <div class="auto-btn4"></div>
+            </div>
+            <!-- automatic navigation end-->
+          </div>
+          <!-- manual navigation start -->
+            <div class="navigation-manual">
+              <label for="radio1" class="manual-btn"></label>
+              <label for="radio2" class="manual-btn"></label>
+              <label for="radio3" class="manual-btn"></label>
+              <label for="radio4" class="manual-btn"></label>
+            </div>
+
+          <!-- manual navigation end -->
+        </div>
+    </div>
+    
+  </section>
+  <!-- Portofolio End -->
   <script src="script.js"></script>
 </body>
 </html>
